feat(ORM): Replace ORM with SqlSugar

--- a/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
@@ -14,12 +14,12 @@
         <MCardActions>
             <MSpacer></MSpacer>
             <MButton Text OnClick="HandleOnCancel">
-                @(I18n!.T("Share.Cancel"))
+                @(I18n.T("Share.Cancel"))
             </MButton>
             <MButton Text
                      Color="red"
                      OnClick="OnOK">
-                @(I18n!.T("Share.OK"))
+                @(I18n.T("Share.OK"))
             </MButton>
         </MCardActions>
     </MCard>
