--- a/SwashbucklerDiary/Components/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/DiaryCard.razor
@@ -37,30 +37,30 @@
                             <MListItem Dense
                                        OnClick="OnTag">
                                 <MListItemContent>
-                                    @(I18n!.T("Diary.Tag"))
+                                    @(I18n.T("Diary.Tag"))
                                 </MListItemContent>
                             </MListItem>
                             <MListItem Dense
                                        OnClick="OnCopy">
                                 <MListItemContent>
-                                    @(I18n!.T("Share.Copy"))
+                                    @(I18n.T("Share.Copy"))
                                 </MListItemContent>
                             </MListItem>
                             <MListItem Dense
                                        OnClick="OnDelete">
                                 <MListItemContent>
-                                    @(I18n!.T("Share.Delete"))
+                                    @(I18n.T("Share.Delete"))
                                 </MListItemContent>
                             </MListItem>
                             <MListItem Dense
                                        OnClick="OnTopping">
                                 <MListItemContent>
-                                    @(IsTop ? I18n!.T("Diary.CancelTop") : I18n!.T("Diary.Top"))
+                                    @(IsTop ? I18n.T("Diary.CancelTop") : I18n.T("Diary.Top"))
                                 </MListItemContent>
                             </MListItem>
                             <MListItem Dense>
                                 <MListItemContent>
-                                    @(I18n!.T("Diary.Export") + "（txt、json、pdf）")
+                                    @(I18n.T("Diary.Export") + "（txt、json、pdf）")
                                 </MListItemContent>
                             </MListItem>
                         </MList>
