--- a/SwashbucklerDiary/Components/TagCard.razor
+++ b/SwashbucklerDiary/Components/TagCard.razor
@@ -33,13 +33,13 @@
                             <MListItem Dense
                                        OnClick="OnRename">
                                 <MListItemContent>
-                                    @(I18n!.T("Share.Rename"))
+                                    @(I18n.T("Share.Rename"))
                                 </MListItemContent>
                             </MListItem>
                             <MListItem Dense
                                        OnClick="OnDelete">
                                 <MListItemContent>
-                                    @(I18n!.T("Share.Delete"))
+                                    @(I18n.T("Share.Delete"))
                                 </MListItemContent>
                             </MListItem>
                         </MList>
