--- a/SwashbucklerDiary/Pages/SearchPage.razor
+++ b/SwashbucklerDiary/Pages/SearchPage.razor
@@ -18,7 +18,7 @@
                 Clearable
                 HideDetails="@("auto")"
                 spellcheck="false"
-                Placeholder="@(I18n!.T("Search.Placeholder"))">
+                Placeholder="@(I18n.T("Search.Placeholder"))">
     </MTextField>
 
 </MAppBar>
