--- a/SwashbucklerDiary/Pages/UserAgreementPage.razor
+++ b/SwashbucklerDiary/Pages/UserAgreementPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/user-agreement"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n!.T("About.Agreement"))"
+<MyAppBar Title="@(I18n.T("About.Agreement"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
