--- a/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
@@ -27,12 +27,12 @@
         <MCardActions>
             <MSpacer></MSpacer>
             <MButton Text OnClick="HandleOnCancel">
-                @(I18n!.T("Share.Cancel"))
+                @(I18n.T("Share.Cancel"))
             </MButton>
             <MButton Text
                      Color="primary"
                      OnClick="HandleOnOK">
-                @(I18n!.T("Share.Save"))
+                @(I18n.T("Share.Save"))
             </MButton>
         </MCardActions>
     </MCard>
