--- a/SwashbucklerDiary/Pages/IndexPage.razor
+++ b/SwashbucklerDiary/Pages/IndexPage.razor
@@ -18,7 +18,7 @@
         </MTab>
     </MTabs>
     <MSpacer></MSpacer>
-    <MButton Large Icon OnClick="NavigateToSearch">
+    <MButton Large Icon OnClick="@(()=>To("/search"))">
         <MIcon>mdi-magnify</MIcon>
     </MButton>
 </MAppBar>
@@ -51,7 +51,7 @@
              Bottom
              Right
              Fixed
-             OnClick="NavigateToWrite"
+             OnClick="@(()=>To("/write"))"
              Fab>
             <MIcon>
                 mdi-pencil
