--- a/SwashbucklerDiary/Pages/SettingPage.razor
+++ b/SwashbucklerDiary/Pages/SettingPage.razor
@@ -24,9 +24,9 @@
                     @(I18n.T("Setting.Diary.Title"))
                 </MListItemContent>
                 <MListItemAction>
-                    <MSwitch Value="Title"
+                    <MSwitch @bind-Value="Title"
                              TValue="bool"
-                             ValueChanged="TitleChanged"
+                             OnChange="TitleChange"
                              Dense
                              Inset>
                     </MSwitch>
@@ -47,7 +47,7 @@
                 <MListItemAction>
                     <MSwitch Value="Markdown"
                              TValue="bool"
-                             ValueChanged="MarkdownChanged"
+                             OnChange="MarkdownChange"
                              Dense
                              Inset>
                     </MSwitch>
@@ -74,9 +74,11 @@
                     @(GetDisplayPrivacy())
                 </MListItemContent>
                 <MListItemAction>
-                    <MSwitch Value="Privacy"
+                    <MSwitch @bind-Value="Privacy"
                              TValue="bool"
-                             ValueChanged="PrivacyChanged"
+                             OnChange="PrivacyChange"
+                             Readonly
+                             OnClick="PrivacyClick"
                              Dense
                              Inset>
                     </MSwitch>
@@ -87,7 +89,23 @@
             {
                 <MDivider Class="mx-3 mx-sm-0"></MDivider>
 
-                <MListItem OnClick="()=>ToDo()">
+                <MListItem OnClick="()=>ShowPPSet = true">
+                    <MListItemIcon>
+                        <MIcon Class="list-item-icon">
+                            mdi-key-outline
+                        </MIcon>
+                    </MListItemIcon>
+                    <MListItemContent>
+                        @(I18n.T("Setting.Safe.PrivacyPassword"))
+                    </MListItemContent>
+                    <MListItemAction>
+                        <MIcon>mdi-chevron-right</MIcon>
+                    </MListItemAction>
+                </MListItem>
+
+                <MDivider Class="mx-3 mx-sm-0"></MDivider>
+
+                <MListItem OnClick="@(()=>To("/privacyLibrary"))">
                     <MListItemIcon>
                         <MIcon Class="list-item-icon">
                             mdi-safe
@@ -104,3 +122,17 @@
         </MList>
     </MCard>
 </ScrollContainer>
+
+<PasswordDialog @bind-Value="ShowPPSet"
+                Title="@(I18n.T("Setting.Safe.SetPassword"))"
+                Placeholder="@(I18n.T("Setting.Safe.Placeholder"))"
+                MaxLength="20"
+                OnOK="SetPassword">
+</PasswordDialog>
+
+<InputDialog @bind-Value="ShowPPInput"
+             Title="@(I18n.T("Setting.Safe.ValidatePassword"))"
+             Placeholder="@(I18n.T("Setting.Safe.Placeholder"))"
+             MaxLength="20"
+             OnOK="InputPassword">
+</InputDialog>
